# goldenfile

./: .gitignore  README.md  config.yaml  discover.py  main.py  pyproject.toml
doc/: design.md  requirements.md
example/000_test/: 000_test.config.yaml
example/002_no_golden_files/: 002_no_golden_files.config.yaml  002_no_golden_files.py
example_test_suites/python3/001_hello_world_failing/: 001_hello_world_failing.config.yaml
example_test_suites/python3/003_with_both_streams/: 003_with_both_streams.input.py  003_with_both_streams.output.stderr  003_with_both_streams.output.stdout
example_test_suites/python3/004_stackoverflow/: 004_stackoverflow.input.py  004_stackoverflow.output.stderr  004_stackoverflow.output.stdout
example_test_suites/python3/005_write_to_file/: 005_write_to_file.config.yaml
example_test_suites/python3/006_write_to_file_failing/: 005_write_to_file_failing.input.py  006_write_to_file_failing.gen.txt
goldenfile/: __init__.py  checker.py  comparison.py  constants.py  diff_exporter.py  discover.py  exception.py  model.py  pipeline.py  runner.py  types.py
goldenfile/model/: __init__.py  result.py
goldenfile/reporters/: base_reporter.py  full_diff_reporter.py  html_reporter.py  print_diffs.py  replace_golden.py  save_report.py  summary_reporter.py  unify_diff.py
goldenfile/test_discoverers/: simple_discoverer.py
temp/002_no_golden_files/: 002_no_golden_files.stderr
tests/comparison/: test_cmp_dir.py  test_cmp_file.py  test_cmp_str.py  test_diff_file.py  test_diff_str.py
(+2 files in other folders)
